--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+	},
+	"repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fankadore/login.git"
   },
   "browserslist": {
     "production": [
