--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
@@ -15,8 +17,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-	},
-	"repository": {
+  },
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Fankadore/login.git"
   },
